js/js.translator/testData/incremental/invalidation/updateExports/lib2/l2b.9.kt
fun funA() = listOf(fun4()).joinToString()
